<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#000000"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/paddin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="100dp">
        <!-- Text La meva puntuació -->
        <!-- contingut puntuació -->
        <TextView
            android:id="@+id/miPuntuaciotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/miPuntuaciotxt"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/puntuacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puntuacio" />
        <!-- Imatge alien -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/alienimagen"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/rounded_corner"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:radius="50dp"
            android:src="@drawable/predator" />
        <!-- uid -->
        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uid"
            android:textColor="#FFFFFF" />
        <!-- correu -->
        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:text="@string/correo"
            android:textColor="#FFFFFF" />
        <!-- nom -->
        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="#000000"
            android:text="@string/nom"
            android:textColor="#FFFFFF" />
        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton"
            android:text="@string/jugarBtn" />
        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton"
            android:text="@string/PuntuacionsBtn" />
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton"
            android:text="@string/CreditsBtn" />
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton"
            android:text="@string/tancarSessio" />
    </LinearLayout>
</ScrollView>