<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/emailEt"
            android:inputType="textEmailAddress" />
        <!-- forcem que la entrada sigui un correu electronic -->

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/passEt"
            android:inputType="textPassword" />
        <!-- forcem que la entrada sigui un password -->


        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/nameEt" />

        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dateTxt"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</RelativeLayout>