<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#000000"
    tools:context=".Menu"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paddingConstraint"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/editImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_completely"
            android:radius="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/alienimagen"
            android:layout_width="191dp"
            android:layout_height="180dp"
            android:layout_marginTop="45dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corner"
            android:radius="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/predator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/editEmail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:layout_marginBottom="160dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_completely"
            android:radius="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/editPassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_completely"
            android:radius="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editicon"
            app:layout_constraintBottom_toTopOf="@+id/GoBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/editUser"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:layout_marginBottom="200dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_completely"
            android:radius="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alienimagen" />

        <Button
            android:id="@+id/GoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:background="@drawable/custombutton"
            android:text="@string/GoBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alienimagen" />

        <!-- correu -->
        <!-- nom -->

        <TextView
            android:id="@+id/editNameShow"
            android:layout_width="65dp"
            android:layout_height="33dp"
            android:layout_marginBottom="200dp"
            android:gravity="center_vertical"
            android:text="@string/nameEt"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alienimagen"
            app:layout_constraintVertical_bias="0.486" />

        <TextView
            android:id="@+id/editPasswordShow"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:gravity="center_vertical"
            android:text="@string/passEt"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/GoBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailShow"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/editEmailShow"
            android:layout_width="65dp"
            android:layout_height="33dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="120dp"
            android:gravity="center_vertical"
            android:text="@string/emailEt"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNameShow" />

        <TextView
            android:id="@+id/nameShow"
            android:layout_width="214dp"
            android:layout_height="36dp"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:text="@string/uid"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editNameShow"
            app:layout_constraintTop_toBottomOf="@+id/alienimagen" />

        <TextView
            android:id="@+id/emailShow"
            android:layout_width="210dp"
            android:layout_height="34dp"
            android:layout_marginBottom="120dp"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:text="@string/correo"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editEmailShow"
            app:layout_constraintTop_toBottomOf="@+id/nameShow" />

        <TextView
            android:id="@+id/passwordShow"
            android:layout_width="193dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:shadowColor="#000000"
            android:text="@string/nom"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/GoBack"
            app:layout_constraintStart_toEndOf="@+id/editPasswordShow"
            app:layout_constraintTop_toBottomOf="@+id/emailShow"
            tools:ignore="TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>